// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RangeCard /> should be render correctly 1`] = `
<body>
  <div>
    <div
      class="card"
      data-testid="card"
    >
      <img
        class="card-image"
        data-testid="card-image"
        sizes="(min-width:3200px) 800px, 1200px"
        src="https://images.autorama.co.uk/Photos/Cap/Vehicles/126268/cap-68051-126268.jpg"
      />
      <div
        class="title"
      >
        <a
          class="heading link -black -large"
          data-testid="link"
          href="/bmw-car-leasing/2-series.html"
        >
          2 Series
        </a>
      </div>
      <div
        class="-flex-h"
      >
        <div
          class="price -large -black"
        >
          <div
            class="price--label"
          >
            from
          </div>
          <span
            class="price--sub"
          >
            £
          </span>
          <span
            class="price--pounds"
          >
            191
          </span>
          <span
            class="price--sub"
          >
            .
            91
          </span>
          <div
            class="price--label"
          >
            Per Month Inc.VAT
          </div>
        </div>
        <a
          class="button -teal -regular -solid"
          data-testid="link"
          href="/bmw-car-leasing/2-series.html"
        >
          <div
            class="button--inner"
          >
            View All
          </div>
        </a>
      </div>
    </div>
  </div>
</body>
`;

exports[`<RangeCard /> should be render correctly with all makes page 1`] = `
<body>
  <div>
    <div
      class="card"
      data-testid="card"
    >
      <div
        class="title"
      >
        <a
          class="heading link -black -large"
          data-testid="link"
          href="/bmw-car-leasing.html"
        >
          bmw
        </a>
      </div>
      <div
        class="-flex-h"
      >
        <div
          class="price -large -black"
        >
          <div
            class="price--label"
          >
            from
          </div>
          <span
            class="price--sub"
          >
            £
          </span>
          <span
            class="price--pounds"
          >
            191
          </span>
          <span
            class="price--sub"
          >
            .
            91
          </span>
          <div
            class="price--label"
          >
            Per Month Inc.VAT
          </div>
        </div>
        <a
          class="button -teal -regular -solid"
          data-testid="link"
          href="/bmw-car-leasing.html"
        >
          <div
            class="button--inner"
          >
            View All
          </div>
        </a>
      </div>
    </div>
  </div>
</body>
`;
